Indsættelse af script tag i HTML

--- a/index - Kopi.html
+++ b/index - Kopi.html
@@ -55,6 +55,9 @@
             </div>
         </footer>
     </div>
+    
+    <script type="text/javascript" src="js/script.js"></script>
+    
 </body>
 
 </html>
