--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             </div>
         </footer>
     </div>
+    
+    <script type="text/javascript" src="js/script.js"></script>
+    
 </body>
 
 </html>
