--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
            <a href="#"><img src="" alt="Norsminde Fiskehusets Logo"></a>
             <nav class="grid-nav">
                 <a href="#">Menu</a>
+                <a href="#">Opskrifter</a>
                 <a href="#">Om Os</a>
-                <a href="#">Kontaktinformationer</a>
+                <a href="#">Kontakt</a>
             </nav>
         </header>
 
