Html ændringer + Betalingslogoer

--- a/index.html
+++ b/index.html
@@ -26,18 +26,20 @@
             </nav>
         </header>
 
-        <section class="grid-content"></section>
-        <aside class="grid-aside"></aside>
-
-        <footer class="grid-footer">
+        <section class="grid-content">
             <div>
-                <h3>Adresse</h3>
+                <h2>Ugens fisk!</h2>
                 <ul>
-                    <li>Gl. Krovej 1A</li>
-                    <li>8300 Odder</li>
+                <li><img src="#" alt="Billed af en tegnet fisk"></li>
+                <li><p>Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade 
+                <br>Pris i DKK: Fiskebruger: 80 ,- 
+                <br>Fiskeburger inkl. chips: 95 ,- 
+                <br>Ring og bestil, eller kom ned og nyd din burger på havnen med en kold fadøl.
+                </p></li>
                 </ul>
             </div>
-
+        </section>
+        <aside class="grid-aside">
             <div>
                 <h3>Åbningstider</h3>
                 <ul>
@@ -46,14 +48,25 @@
                     <li>Søndag: 10.00 - 21.00</li>
                 </ul>
             </div>
+        </aside>
 
+        <footer class="grid-footer">
             <div>
                 <h3>Kontakt</h3>
                 <ul>
                     <li><a href="tel:25555203"><img src="#">+45 25 55 52 03</a></li>
-                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="">kontakt@norsmindefiskehus.dk</a></li>
+                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="#">kontakt@norsmindefiskehus.dk</a></li>
+                    <li><img src="#">Gl. Krovej 104, 8300 Odder</li>
                 </ul>
             </div>
+
+            <div>
+                <ul>
+                    <li><img src="images/Dankort_Logo.png" alt="Dankort Logo" width="50px"></li>
+                    <li><img src="images/MobilePay_Logo.png" alt="MobilePay Logo" width="60px"></li>
+                </ul>
+            </div>
+
         </footer>
     </div>
 
