Styling af Forside

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Norsminde Fiskehus - Forside</title>
     <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
@@ -20,7 +20,7 @@
             <nav class="grid-nav">
                 <a href="#">Menu</a>
                 <a href="#">Opskrifter</a>
-                <a href="#"><img src="" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="index.html"><img src="images/NorsmindeFiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
                 <a href="#">Om Os</a>
                 <a href="#">Kontakt</a>
             </nav>
@@ -29,15 +29,14 @@
         <section class="grid-content">
             <div>
                 <h2>Ugens fisk!</h2>
-                <ul>
-                <li><img src="#" alt="Billed af en tegnet fisk"></li>
-                <li><p>Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade 
-                <br>Pris i DKK: Fiskebruger: 80 ,- 
-                <br>Fiskeburger inkl. chips: 95 ,- 
-                <br>Ring og bestil, eller kom ned og nyd din burger på havnen med en kold fadøl.
-                </p></li>
-                </ul>
+                <img src="images/UgensFisk_grafik.png" alt="Billed af en tegnet fisk" width="50%">
+                <p>Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
+                    <br><br>Pris i DKK: Fiskebruger: 80,-
+                    <br>Fiskeburger inkl. chips: 95,-
+                    <br>Ring og bestil, eller kom ned og nyd din burger på havnen med en kold fadøl.
+                </p>
             </div>
+
         </section>
         <aside class="grid-aside">
             <div>
@@ -50,6 +49,12 @@
             </div>
         </aside>
 
+        <div class="grid-gallery">
+            <img src="images/madgalleri/madgalleri1.jpg" alt="Billede af en madplatte fra Norsminde Fiskehus">
+            <img src="images/madgalleri/madgalleri2.jpg" alt="Billede af fiskefrikadeller">
+            <img src="images/madgalleri/madgalleri3.jpg" alt="Billede af fiskefilet">
+        </div>
+
         <footer class="grid-footer">
             <div>
                 <h3>Kontakt</h3>
@@ -60,11 +65,9 @@
                 </ul>
             </div>
 
-            <div>
-                <ul>
-                    <li><img src="images/Dankort_Logo.png" alt="Dankort Logo" width="50px"></li>
-                    <li><img src="images/MobilePay_Logo.png" alt="MobilePay Logo" width="60px"></li>
-                </ul>
+            <div class="payment">
+                <img src="images/Dankort_Logo.png" alt="Dankort Logo" width="50px">
+                <img src="images/MobilePay_Logo.png" alt="MobilePay Logo" width="60px">
             </div>
 
         </footer>
