--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <footer class="grid-footer">
-            <div>
+            <div class="waterwave">
                 <h3>Kontakt</h3>
                 <ul>
                     <li><a href="tel:25555203"><img src="#">+45 25 55 52 03</a></li>
