Ændringer på forside

--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="gridwrapper">
-        <header class="grid-header">
+        <header>
             <nav class="grid-nav">
                 <a href="#">Menu</a>
                 <a href="#">Opskrifter</a>
@@ -25,39 +25,17 @@
                 <a href="#">Kontakt</a>
             </nav>
         </header>
-        
-        <div class="forsidebillede">
-            <img src="images/test.jpg" alt="">
-        </div>
-        
-        <section class="grid-content">
-            <div class="content">
-                <h2>Ugens fisk!</h2>
-                <img src="images/UgensFisk_grafik.png" alt="Billed af en tegnet fisk" width="50%">
-                <p>Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
-                    <br><br>Pris i DKK: Fiskebruger: 80,-
-                    <br>Fiskeburger inkl. chips: 95,-
-                    <br>Ring og bestil, eller kom ned og nyd din burger på havnen med en kold fadøl.
-                </p>
-            </div>
 
+        <section class=grid-content>
+            <div class="kontakt">
+                <h2>Her finder du os</h2>
+                <p>Norsminde Fiskehus Gl. Krovej 1A 8300 Odder </p>
+                <br>
+                <p>Tlf: 2555 5203</p>
+                <br>
+                <p>Mail: Norsmindefiskehus@gmail.com</p>
+            </div>
         </section>
-        <aside class="grid-aside">
-            <div class="asidecontent">
-                <h3>Åbningstider</h3>
-                <ul>
-                    <li>Mandag - Fredag: 10.00 - 20.00</li>
-                    <li>Lørdag: 10.00 - 21.00</li>
-                    <li>Søndag: 10.00 - 21.00</li>
-                </ul>
-            </div>
-        </aside>
-
-        <div class="grid-gallery">
-            <img src="images/madgalleri/madgalleri1.jpg" alt="Billede af en madplatte fra Norsminde Fiskehus">
-            <img src="images/madgalleri/madgalleri2.jpg" alt="Billede af fiskefrikadeller">
-            <img src="images/madgalleri/madgalleri3.jpg" alt="Billede af fiskefilet">
-        </div>
 
         <footer class="grid-footer">
             <div class="waterwave">
