Kontakt.html & index.html + google maps + fonts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
     <title>Norsminde Fiskehus - Forside</title>
     <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
@@ -20,9 +21,9 @@
             <nav class="grid-nav">
                 <a href="#">Menu</a>
                 <a href="#">Opskrifter</a>
-                <a href="index.html"><img src="images/NorsmindeFiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
+                <a href="index.html" class="nohover"><img src="images/NorsmindeFiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
                 <a href="#">Om Os</a>
-                <a href="#">Kontakt</a>
+                <a href="kontakt.html">Kontakt</a>
             </nav>
         </header>
         
@@ -33,7 +34,7 @@
         <section class="grid-content">
             <div class="content">
                 <h2>Ugens fisk!</h2>
-                <img src="images/UgensFisk_grafik.png" alt="Billed af en tegnet fisk" width="50%">
+                <img src="images/UgensFisk_grafik.png" alt="Billed af en tegnet fisk">
                 <p>Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
                     <br><br>Pris i DKK: Fiskebruger: 80,-
                     <br>Fiskeburger inkl. chips: 95,-
@@ -45,10 +46,25 @@
         <aside class="grid-aside">
             <div class="asidecontent">
                 <h3>Åbningstider</h3>
+                <p>Åbningstider kan variere</p>
                 <ul>
-                    <li>Mandag - Fredag: 10.00 - 20.00</li>
-                    <li>Lørdag: 10.00 - 21.00</li>
-                    <li>Søndag: 10.00 - 21.00</li>
+                    <li>Mandag:</li>
+                    <li>Tirsdag:</li>
+                    <li>Onsdag:</li>
+                    <li>Torsdag:</li>
+                    <li>Fredag:</li>
+                    <li>Lørdag:</li>
+                    <li>Søndag:</li>
+                </ul>
+                
+                <ul class="tidspunkter">
+                    <li>10-18</li>
+                    <li>10-18</li>
+                    <li>10-18</li>
+                    <li>10-18</li>
+                    <li>10-19</li>
+                    <li>10-19</li>
+                    <li>10-18</li>
                 </ul>
             </div>
         </aside>
