om_os.html styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#">Menu</a>
                 <a href="#">Opskrifter</a>
                 <a href="index.html" class="nohover"><img src="images/NorsmindeFiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
-                <a href="#">Om Os</a>
+                <a href="om_os.html">Om Os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
         </header>
