--- a/om_os.html
+++ b/om_os.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Forside</title>
+    <title>Norsminde Fiskehus - Om Os</title>
     <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
 </head>
 
-
-
 <body>
+    <!-- NAV - Menubar -->
     <div class="gridwrapper">
         <header class="grid-header">
             <nav class="grid-nav">
@@ -28,6 +27,8 @@
                 <a href="kontakt.html">Kontakt</a>
             </nav>
         </header>
+
+        <!-- Content - Historie -->
         <section class="grid-content">
             <div class="historie">
                 <h1>Historie</h1>
@@ -39,6 +40,7 @@
             </div>
         </section>
 
+        <!-- Aside - Hvem er vi? -->
         <aside class="grid-aside">
             <div class="hvemervi">
                 <h1>Hvem er vi?</h1>
@@ -52,7 +54,7 @@
                     </div>
                 </div>
 
-                   <div class="hvemervirow">
+                <div class="hvemervirow">
                     <div class="hvemervicolumn">
                         <p><b>Signe Graham</b> er 38 år, og er en af forpagterne af Norsminde Fiskehus. Hun er ufaglært tjener, og hjælper til dagligt på havnen. Inden overtagelse af Norsminde Fiskehus ejede hun sammen med sin mand, Rhodi Graham en lille café og et bageri i Holland. </p>
                     </div>
@@ -61,37 +63,41 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Værdier og Mission -->
             <div class="grid-gallery">
-          <div class="vmheight"></div>
-        </div>
-        <div class="valuesmission">
-            <h3>Vores værdier og mission;</h3>
+                <div class="vmheight"></div>
+            </div>
+            <div class="valuesmission">
+                <h3>Vores værdier og mission;</h3>
 
-            <p>"Vi går ind for høj kvalitet til fornuftige priser, det er det vigtigste. Vi ryger selv vores fisk, bager selv vores brød og remouladen bliver lavet fra bunden. Vi kæler for gode råvarer, og det kan man smage i det færdige produkt.</p>
-            <br>
-            <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
+                <p>"Vi går ind for høj kvalitet til fornuftige priser, det er det vigtigste. Vi ryger selv vores fisk, bager selv vores brød og remouladen bliver lavet fra bunden. Vi kæler for gode råvarer, og det kan man smage i det færdige produkt.</p>
+                <br>
+                <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
 
-            <span>- Signe Graham</span>
+                <span>- Signe Graham</span>
             </div>
         </aside>
 
-        
 
+
+        <!-- Footer -->
         <footer class="grid-footer">
-            <div class="waterwave">
+            <div class="kontakt_ikon">
                 <h3>Kontakt</h3>
                 <ul>
-                    <li><a href="tel:25555203"><img src="#">+45 25 55 52 03</a></li>
-                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="#">kontakt@norsmindefiskehus.dk</a></li>
-                    <li><img src="#">Gl. Krovej 104, 8300 Odder</li>
+                    <li><a href="tel:25555203"><img src="images/kontakt_ikoner/icon_telefon.png">+45 25 55 52 03</a></li>
+                    <li><a href="mailto:kontakt@norsmindefiskehus.dk"><img src="images/kontakt_ikoner/icon_mail.png">kontakt@norsmindefiskehus.dk</a></li>
+                    <li><img src="images/kontakt_ikoner/icon_adresse.png">Gl. Krovej 104, 8300 Odder</li>
                 </ul>
             </div>
 
             <div class="payment">
-                <img src="images/Dankort_Logo.png" alt="Dankort Logo" width="50px">
-                <img src="images/MobilePay_Logo.png" alt="MobilePay Logo" width="60px">
+                <div class="payment_align"><img src="images/betalingsmetoder/dankort_logo.png" alt="Dankort Logo">
+                </div>
+                <div class="payment_align"><img src="images/betalingsmetoder/mobilepay_logo.png" alt="MobilePay Logo">
+                </div>
             </div>
-
         </footer>
     </div>
 </body>
