HTML + CSS ændringer

--- a/om_os.html
+++ b/om_os.html
@@ -21,8 +21,8 @@
         <header class="grid-header">
             <nav class="grid-nav">
                 <a href="#">Menu</a>
-                <a href="#">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/NorsmindeFiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
+                <a href="opskrifter.html">Opskrifter</a>
+                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
                 <a href="om_os.html" class="active">Om Os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
@@ -36,7 +36,7 @@
                 <br>
                 <p>I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.
                 </p>
-                <img src="images/nf_gamletid.jpg">
+                <img src="images/om_os/nf_gamletid.jpg">
             </div>
         </section>
 
@@ -47,10 +47,10 @@
 
                 <div class="hvemervirow">
                     <div class="hvemervicolumn">
-                        <img src="images/redningsring_kvinde.png">
+                        <img src="images/om_os/redningsring_kvinde.png">
                     </div>
                     <div class="hvemervicolumn">
-                        <img src="images/redningsring_mand.png">
+                        <img src="images/om_os/redningsring_mand.png">
                     </div>
                 </div>
 
@@ -66,19 +66,17 @@
 
             <!-- Værdier og Mission -->
             <div class="grid-gallery">
-                <div class="vmheight"></div>
-            </div>
-            <div class="valuesmission">
-                <h3>Vores værdier og mission;</h3>
+                <div class="valuesmission">
+                    <h3>Vores værdier og mission;</h3>
 
-                <p>"Vi går ind for høj kvalitet til fornuftige priser, det er det vigtigste. Vi ryger selv vores fisk, bager selv vores brød og remouladen bliver lavet fra bunden. Vi kæler for gode råvarer, og det kan man smage i det færdige produkt.</p>
-                <br>
-                <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
+                    <p>"Vi går ind for høj kvalitet til fornuftige priser, det er det vigtigste. Vi ryger selv vores fisk, bager selv vores brød og remouladen bliver lavet fra bunden. Vi kæler for gode råvarer, og det kan man smage i det færdige produkt.</p>
+                    <br>
+                    <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
 
-                <span>- Signe Graham</span>
+                    <span>- Signe Graham</span>
+                </div>
             </div>
         </aside>
-
 
 
         <!-- Footer -->
@@ -99,6 +97,7 @@
                 </div>
             </div>
         </footer>
+
     </div>
 </body>
 
