menu.html + css ændring

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="gridwrapper">
         <header class="grid-header">
             <nav class="grid-nav">
-                <a href="#">Menu</a>
+                <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
                 <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="150px"></a>
                 <a href="om_os.html">Om Os</a>
