HTML + CSS Ændringer (flere waterwave ændringer)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="grid-nav">
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo" width="350px"></a>
+                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
                 <a href="om_os.html">Om Os</a>
                 <a href="kontakt.html">Kontakt</a>
             </nav>
@@ -37,14 +37,15 @@
             <div class="content">
                 <h2>Ugens fisk!</h2>
                 <img src="images/ugens_fisk_grafik.png" alt="Billed af en tegnet fisk">
-                <p>Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
-                    <br><br>Pris i DKK: Fiskebruger: 80,-
-                    <br>Fiskeburger inkl. chips: 95,-
-                    <br>Ring og bestil, eller kom ned og nyd din burger på havnen med en kold fadøl.
-                </p>
             </div>
+            <p class="ugens-fisk_content">Ugens fisk er en sprød fiskeburger med hjemmelavet remoulade.
+                    <br><br>Pris i DKK: Fiskebruger: <b>80,-</b>
+                    <br>Fiskeburger inkl. chips: <b>95,-</b>
+                    <br><br>Ring og bestil på <b>25 55 52 03</b>, eller kom ned og nyd din burger på havnen med en kold fadøl.
+                </p>
         </section>
 
+       
         <!-- Aside - Åbningstider -->
         <aside class="grid-aside">
             <div class="asidecontent">
