--- a/kontakt.html
+++ b/kontakt.html
@@ -46,7 +46,7 @@
                         <label for="subject">Emne</label>
                         <textarea id="subject" name="subject" style="height:200px"></textarea>
 
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Send">
 
                     </form>
                 </div>
