Tilføjet tekst til menukort

--- a/menu.html
+++ b/menu.html
@@ -31,12 +31,16 @@
         <!-- Content - Historie -->
         <section class="grid-content chalkboard">
             <h2 class="menu-section-title">MENUKORT</h2>
+            
+            <div id="menu-undertekst">
+            <p>Spring køen over, og bestil hjemmefra på +45 2555 5203 </p>
+                </div>
 
             <div class="menu-body">
                 <div class="menu-section">
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            1 fiskefrikadelle eller 1 filet
+                            1 stk. fiskefrikadelle eller 1 stk. filet
                         </div>
                         <div class="menu-item-price">
                             15,-
