--- a/opskrifter.html
+++ b/opskrifter.html
@@ -62,19 +62,19 @@ Peber
 <br>
 Smager godt på rugbrød eller flutes.">
                <img src="images/opskrifter/lettunsalat.jpg" alt="Billede af en let tunsalat"></a>
-                <h2>Let tunsalat!</h2>
+                <h2>Let tunsalat</h2>
             </div>
 
             <div class="opskrift_pos2">
                 <a href="images/opskrifter/stjerneskud.jpg" data-lightbox="stjerneskud.jpg">
                 <img src="images/opskrifter/stjerneskud.jpg" alt="Billede af stjerneskud"></a>
-                <h2>Stjerneskud!</h2>
+                <h2>Stjerneskud</h2>
             </div>
 
             <div class="opskrift_pos3">
                 <a href="images/opskrifter/roogetlaks.jpg" data-lightbox="roogetlaks.jpg">
                 <img src="images/opskrifter/roogetlaks.jpg" alt="Billede af Røgetlaks"></a>
-                <h2>Røgetlaks!</h2>
+                <h2>Røgetlaks</h2>
             </div>
         </div>
 
