--- a/kontakt.html
+++ b/kontakt.html
@@ -32,6 +32,7 @@
         <section class=grid-content>
             <div class="kontakt">
                 <div class="kontaktform">
+                   <h3>Du kan kontakte os her uden for sæsonen</h3>
                     <form action="action_page.php">
 
                         <label for="fname">Navn</label>
