--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
     <title>Norsminde Fiskehus - Kontakt</title>
-    <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
+    <meta name="description" content="Norsminde Fiskehusets kontaktinformationer, google maps">
 </head>
 
 <body>
