--- a/opskrifter.html
+++ b/opskrifter.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Forside</title>
-    <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
+    <title>Norsminde Fiskehus - Opskrifter</title>
+    <meta name="description" content="Norsminde Fiskehusets opskrifter">
 </head>
 
 <body>
