--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
     <title>Norsminde Fiskehus - Forside</title>
-    <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
+    <meta name="description" content="Norsminde Fiskehusets forside, ugens fisk, åbningstider, madgalleri">
 </head>
 
 <body>
