--- a/menu.html
+++ b/menu.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Om Os</title>
-    <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
+    <title>Norsminde Fiskehus - Menu</title>
+    <meta name="description" content="Norsminde Fiskehusets menukort, drikkevarer, salg af fisk">
 </head>
 
 <body>
@@ -41,20 +41,16 @@
                     <div class="menu-item">
                         <div class="menu-item-name">
                             1 stk. fiskefrikadelle eller 1 stk. filet
-                        </div>
-                        <div class="menu-item-price">
-                            15,-
-                        </div>
-                    </div>
-                    <br>
-                    <div class="menu-item">
-                        <div class="menu-item-name">
+                            <br>
                             4 stk. frit valg
                         </div>
                         <div class="menu-item-price">
+                            15,-
+                            <br>
                             50,-
                         </div>
                     </div>
+                    <br>
                     <br>
                     <div class="menu-item">
                         <div class="menu-item-name">
