--- a/om_os.html
+++ b/om_os.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
     <title>Norsminde Fiskehus - Om Os</title>
-    <meta name="description" content="Norsminde Fiskehusets hjemmeside, find kontaktoplysninger, adresse samt åbningstider. Ugens tilbud, menukort og salg af fisk">
+    <meta name="description" content="Norsminde Fiskehusets historie, hvem er vi, værdier, mission">
 </head>
 
 <body>
